--- a/integrantes.html
+++ b/integrantes.html
@@ -66,7 +66,7 @@
         </div>
 
         <h2>GitHub da equipe</h2>
-        <a href="https://github.com/rangelbjordao" target="_blank" class="github-icon">
+        <a href="https://github.com/signalProteam" target="_blank" class="github-icon">
             <i class="fab fa-github"></i>
         </a>
     </section>
