atualizacao dos textos

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
         <!-- Seção de apresentação -->
         <section>
-            <h2>Como CCR Alertas pode transformar</h2>
-            <p>O software CCR alertas foi desenvolvido com o objetivo de melhorar a comunicação e a segurança
-                operacional durante a operação ferroviária, garantindo que as informações críticas sejam transmitidas de
-                maneira rápida, eficiente e precisa, independentemente da localização ou das condições de trabalho. </p>
+            <h2>Como CCR Alertas pode transformar as operações</h2>
+            <p>O software CCR Alertas foi desenvolvido para melhorar a comunicação e a segurança operacional durante as
+                operações, garantindo a transmissão rápida, eficiente e precisa de informações críticas,
+                independentemente da localização ou das condições de trabalho. </p>
         </section>
 
         <!-- Seção de vantagens -->
@@ -45,20 +45,22 @@
             <div class="quadros">
                 <div class="quadro">
                     <h3>Melhoria na Segurança</h3>
-                    <p>Com alertas imediatos, a segurança é priorizada, minimizando riscos e acidentes.</p>
+                    <p>Com alertas imediatos, a segurança é priorizada, minimizando riscos e prevenindo acidentes.</p>
                 </div>
                 <div class="quadro">
                     <h3>Aumento da Eficiência</h3>
-                    <p>As funcionalidades de reportar eventos e solicitar ajuda melhora a colaboração entre a equipe,
-                        resultando em aumento na eficiência.</p>
+                    <p>As funcionalidades de reportar eventos e solicitar ajuda melhoram a colaboração entre a equipe,
+                        aumentando a eficiência.</p>
                 </div>
                 <div class="quadro">
                     <h3>Registros para Análise de dados</h3>
-                    <p>Os alertas ficaram no histórico para serem utilizados na análise de dados.</p>
+                    <p>Os alertas ficam registrados no histórico, facilitando a análise de dados e melhorando decisões
+                        futuras.</p>
                 </div>
                 <div class="quadro">
                     <h3>Uso em Ambientes Barulhentos</h3>
-                    <p>Em ambientes com muito ruído, é mais fácil ler um alerta do que escutar a comunicação pelo rádio.
+                    <p>Em ambientes com muito ruído, é mais fácil visualizar um alerta do que escutar a comunicação pelo
+                        rádio.
                     </p>
                 </div>
             </div>
@@ -70,25 +72,22 @@
             <div class="quadros">
                 <div class="quadro">
                     <h3>Reportar Eventos</h3>
-                    <p>Permitir que os funcionários gerem alertas sobre os problemas nas estações e linhas, passando por
-                        3 etapas: Escolher a situação, o grupo que será destinado esse alerta e informar o grau da
-                        gravidade.</p>
+                    <p>Permite que os funcionários gerem alertas sobre problemas nas estações e linhas, seguindo três
+                        etapas: Escolher a situação, o grupo que será destinado e definição do grau da gravidade.</p>
                 </div>
                 <div class="quadro">
                     <h3>Monitorar eventos em aberto</h3>
                     <p>Permite que os funcionários acompanhem, em tempo real, todos os incidentes ou problemas que foram
-                        reportados e ainda não foram resolvidos.</p>
+                        reportados e ainda estão pendentes de resolução.</p>
                 </div>
                 <div class="quadro">
                     <h3>Solicitar Ajuda</h3>
-                    <p>Permite que o funcionários solicite ajuda para resolver um problema em aberto quando preciso,
+                    <p>Permite que o funcionários solicitem ajuda para resolver um problema em aberto quando preciso,
                         criando uma nova notificação para os funcionários do mesmo cargo.</p>
                 </div>
                 <div class="quadro">
                     <h3>Registro dos Alertas</h3>
-                    <p>O software disponibiliza um histórico de alertas, o histórico irá fornecer informações para
-                        facilitar a identificação de padrões e auxiliar na tomada de decisões para melhorias e resolução
-                        de problemas.</p>
+                    <p>O software mantém um histórico de alertas, fornecendo informações que facilitam a identificação de padrões e auxiliam na tomada de decisões para melhorias e solução de problemas.</p>
                 </div>
             </div>
         </section>
